<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/newbackground"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/DescriptionLogo"
            app:srcCompat="@drawable/dicee_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/user_dice"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/dice"
                app:srcCompat="@drawable/dice3" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/User"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="User Dice"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/com_dice"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/dice"
                app:srcCompat="@drawable/dice4" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:contentDescription="@string/Computer"
                android:text="Computer Dice"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/user_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="#56E0F8"
                android:contentDescription="@string/btn"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/btn"
                android:textSize="20sp" />

            <Button
                android:id="@+id/com_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="#56E0F8"
                android:contentDescription="@string/btn2"
                android:paddingRight="16dp"
                android:text="@string/btn2"
                android:textSize="20sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/Result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>